icon alignment and scale fix

--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,7 @@ h5 {
   border: none;
   cursor: pointer;
   font-weight: 600;
+  white-space: nowrap;
 }
 
 /* The container <div> - needed to position the dropdown content */
